--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "cadastro",
   "version": "1.0.0",
   "description": "\"Sistema de cadastro feito com node js\"",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "\"Heber\"",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
